[Angelos Boules]: Fixed floating dashboard buttons on project screen - aligned them eleft

--- a/src/pages/MyProjects/MyProjects.module.css
+++ b/src/pages/MyProjects/MyProjects.module.css
@@ -58,3 +58,11 @@ body {
     display: block;
   }
 }
+
+@media(max-width: 991.99px) {
+  #dashboard-buttons {
+    justify-content: flex-start;
+    margin-top: 0.75rem;
+    flex-wrap: wrap;
+  }
+}
